<!--
  ~ Copyright (c) 2015 Zelory.
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<resources>
    <string name="app_name">CodePolitan</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="news">News</string>
    <string name="nyan_komik">NyanKomik</string>
    <string name="meme">Meme</string>
    <string name="grid">Grid</string>
    <string name="quotes">Quotes</string>
    <string name="error_message">Could not connect to server!</string>
    <string name="retry">Retry</string>
    <string name="set_articles">Your Articles</string>
    <string name="set_articles_desc">We just provide articles is you want to see by follow specific category and tag.</string>
    <string name="not_just_news">Look with Different Perspective</string>
    <string name="not_just_news_desc">different type will be displayed with different way.</string>
    <string name="read_offline">Anywhere, Anytime</string>
    <string name="read_offline_desc">not just save the link, you can read article in offline without internet connection.</string>
    <string name="done">Done</string>
    <string name="min_choose_category">Please Choose Min 5 Categories</string>
    <string name="hint_category">Find your category</string>
    <string name="min_choose_tag">Please Choose Min 5 Tags</string>
    <string name="hint_tag">Find your tag</string>
    <string name="read_later_desc">Click to read later this article.</string>
    <string name="bookmark_desc">Click to bookmark this article.</string>
    <string name="read_later">Read Later</string>
    <string name="read_later_slogan">Articles you want read it later</string>
    <string name="bookmark">Bookmark</string>
    <string name="bookmark_slogan">Your bookmarked articles</string>
    <string name="tag">Tag :</string>
    <string name="share">Share</string>
    <string name="other_articles">Other Articles</string>
    <string name="share_desc">Share this article to your friends.</string>
    <string name="codepolitan_com">Codepolitan.com</string>
    <string name="rate">Rate</string>
    <string name="rate_desc">Let\'s give us five rates</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_desc">Give us feedback for better apps</string>
    <string name="follow">Follow</string>
    <string name="follow_desc">Follow our social media to get more info</string>
    <string name="about_dev">About Developer</string>
    <string name="about_dev_desc">Meet Codepolitan apps developer</string>
    <string name="about">About Codepolitan</string>
    <string name="about_desc">What is Codepolitan.com?</string>
    <string name="help">Help</string>
    <string name="help_desc">Want to know how to use this apps?</string>
    <string name="codepolitan_desc"><![CDATA[CodePolitan adalah media online yang ditujukan untuk programmer Indonesia sebagai tempat bacaan dan sumber informasi dunia pemrograman dan teknologi. Sebagai sebuah website media, CodePolitan mencoba menghadirkan berbagai konten yang berkualitas yang bisa menginspirasi dan menambah wawasan seputar dunia pemrograman.\n\nKonten-konten yang ada di CodePolitan antara lain berisi berita, review komunitas, review & wawancara tokoh, review tools, review event, catatan rilis framework, tips & trik, serta komik dan meme seputar pemrograman.\n\nCodePolitan juga memiliki sebuah produk turunan, yaitu KaryaLokal. Karyalokal CodePolitan adalah website direktori yang berisi karya-karya atau produk-produk yang dihasilkan oleh developer lokal. KaryaLokal CodePolitan dibangun untuk mewadahi para developer lokal yang memiliki karya untuk mempublikasikan karyanya kepada publik. Tujuan KaryaLokal dibuat adalah untuk menghimpun dalam satu tempat daftar karya-karya developer lokal.]]></string>
    <string name="gplus">Google Plus</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="zelory">Zelory</string>
    <string name="zelory_team">Zelory\'s Team</string>
    <string name="send_email">Send email to developer</string>
    <string name="go_to_play_store">Go to Play Store account</string>
    <string name="go_to_linkedin">Go to LinkedIn</string>
    <string name="zetra">Zetra</string>
    <string name="programmer">Programmer</string>
    <string name="zetra_desc">Dalam pembuatan CodePolitan Android apps, Zetra berperan sebagai programmer tunggal.</string>
    <string name="rya">Rya Meyvriska</string>
    <string name="designer">Designer</string>
    <string name="rya_desc">Dalam pembuatan CodePolitan Android apps, Zetra berperan sebagai UX Designer tunggal.</string>
    <string name="feedback_hint">Share your experience</string>
    <string name="skip">Skip</string>
</resources>
