<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015 Zelory.
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="NOTIFICATION"
            android:textColor="@color/secondary_text"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/secondary_text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Notification"
                    android:textColor="@color/secondary_text"
                    android:textSize="20sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Turn on notification to get interesting news."
                    android:textColor="@color/secondary_text"
                    android:textSize="14sp"/>
            </LinearLayout>

            <CheckBox
                android:id="@+id/cb_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/secondary_text"/>

        <LinearLayout
            android:id="@+id/ll_ringtone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ringtone"
                android:textColor="@color/secondary_text"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Choose ringtone when you have notification."
                android:textColor="@color/secondary_text"
                android:textSize="14sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/secondary_text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Vibration"
                    android:textColor="@color/secondary_text"
                    android:textSize="20sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Turn on vibration when you have notification."
                    android:textColor="@color/secondary_text"
                    android:textSize="14sp"/>
            </LinearLayout>

            <CheckBox
                android:id="@+id/cb_vibrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="OTHERS"
            android:textColor="@color/secondary_text"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/secondary_text"/>

        <RelativeLayout
            android:id="@+id/rl_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <ImageView
                android:id="@+id/icon_rate"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_rate"/>

            <TextView
                android:id="@+id/title_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="1dp"
                android:layout_toEndOf="@+id/icon_rate"
                android:layout_toRightOf="@+id/icon_rate"
                android:text="@string/rate"
                android:textColor="@color/secondary_text"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/title_rate"
                android:layout_alignStart="@+id/title_rate"
                android:layout_below="@+id/title_rate"
                android:text="@string/rate_desc"
                android:textColor="@color/secondary_text"
                android:textSize="14sp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_feed_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <ImageView
                android:id="@+id/icon_feed_back"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_feedback"/>

            <TextView
                android:id="@+id/title_feed_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:layout_toEndOf="@+id/icon_feed_back"
                android:layout_toRightOf="@+id/icon_feed_back"
                android:text="@string/feedback"
                android:textColor="@color/secondary_text"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/title_feed_back"
                android:layout_alignStart="@+id/title_feed_back"
                android:layout_below="@+id/title_feed_back"
                android:text="@string/feedback_desc"
                android:textColor="@color/secondary_text"
                android:textSize="14sp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_follow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <ImageView
                android:id="@+id/icon_follow"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_follow"/>

            <TextView
                android:id="@+id/title_follow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:layout_toEndOf="@+id/icon_follow"
                android:layout_toRightOf="@+id/icon_follow"
                android:text="@string/follow"
                android:textColor="@color/secondary_text"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/title_follow"
                android:layout_alignStart="@+id/title_follow"
                android:layout_below="@+id/title_follow"
                android:text="@string/follow_desc"
                android:textColor="@color/secondary_text"
                android:textSize="14sp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_about_dev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <ImageView
                android:id="@+id/icon_about_dev"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_about_developer"/>

            <TextView
                android:id="@+id/title_about_dev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:layout_toEndOf="@+id/icon_about_dev"
                android:layout_toRightOf="@+id/icon_about_dev"
                android:text="@string/about_dev"
                android:textColor="@color/secondary_text"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/title_about_dev"
                android:layout_alignStart="@+id/title_about_dev"
                android:layout_below="@+id/title_about_dev"
                android:text="@string/about_dev_desc"
                android:textColor="@color/secondary_text"
                android:textSize="14sp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <ImageView
                android:id="@+id/icon_about"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_about"/>

            <TextView
                android:id="@+id/title_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:layout_toEndOf="@+id/icon_about"
                android:layout_toRightOf="@+id/icon_about"
                android:text="@string/about"
                android:textColor="@color/secondary_text"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/title_about"
                android:layout_alignStart="@+id/title_about"
                android:layout_below="@+id/title_about"
                android:text="@string/about_desc"
                android:textColor="@color/secondary_text"
                android:textSize="14sp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <ImageView
                android:id="@+id/icon_help"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_help"/>

            <TextView
                android:id="@+id/title_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:layout_toEndOf="@+id/icon_help"
                android:layout_toRightOf="@+id/icon_help"
                android:text="@string/help"
                android:textColor="@color/secondary_text"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/title_help"
                android:layout_alignStart="@+id/title_help"
                android:layout_below="@+id/title_help"
                android:text="@string/help_desc"
                android:textColor="@color/secondary_text"
                android:textSize="14sp"/>

        </RelativeLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>